--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width,initial-scale=1'>
     <title>Frontend Mentor | Rock, Paper, Scissors</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap"
+        rel="stylesheet">
+
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicon-32x32.png">
 
     <link rel='stylesheet' href='./assets/css/normalize.css'>
@@ -16,10 +22,15 @@
 
 
     <main>
-        <section class="game-area" id="game-area">
-            <button class="game-controls" data-select="paper">paper</button>
-            <button class="game-controls" data-select="scissors">scissors</button>
-            <button class="game-controls" data-select="rock">rock</button>
+        <section class="score-area" id="score-area">
+            <img src="./assets/images/logo.svg" alt="Rock, Paper, Scissors">
+            <div class="score-container">
+                <h2>score</h2>
+                <p id="score">0</p>
+            </div>
+        </section>
+        <section class="game-area results" id="game-area">
+
         </section>
     </main>
     <script src='./assets/js/main.js'></script>
